[gd_scene load_steps=7 format=3 uid="uid://bqvhoyc8hm3u0"]

[ext_resource type="Script" uid="uid://dxiilpwi3l5r5" path="res://Scripts/Entities/Self/ghost.gd" id="1_n0igq"]
[ext_resource type="SpriteFrames" uid="uid://xccyeoay8wel" path="res://Assets/Player/ghost.tres" id="2_hjtyh"]
[ext_resource type="PackedScene" uid="uid://btvl2e15nmict" path="res://Scenes/Entities/Self/command_node.tscn" id="3_t80u2"]
[ext_resource type="PackedScene" uid="uid://bhygnmkhvep4j" path="res://Scenes/Entities/Projectiles/Source/ak_47_source.tscn" id="4_537r6"]
[ext_resource type="SpriteFrames" uid="uid://bj2sv15rxvmri" path="res://Assets/Player/muzzle.tres" id="5_hjtyh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hjtyh"]
radius = 31.9603
height = 77.6297

[node name="Ghost" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_n0igq")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, 6)
rotation = -1.68075
scale = Vector2(0.0698046, 0.0698046)
sprite_frames = ExtResource("2_hjtyh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 7)
rotation = -0.137881
shape = SubResource("CapsuleShape2D_hjtyh")

[node name="CommandNode" parent="." node_paths=PackedStringArray("character", "muzzleSprite") instance=ExtResource("3_t80u2")]
character = NodePath("..")
muzzleSprite = NodePath("../MuzzleFlash")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="LifeTimer" type="Timer" parent="."]
autostart = true

[node name="AK47Source" parent="." instance=ExtResource("4_537r6")]
position = Vector2(50.004, 0)
projectile_type = 4

[node name="MuzzleFlash" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(57, 0)
scale = Vector2(0.09375, 0.09375)
sprite_frames = ExtResource("5_hjtyh")

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
